--- a/Firmware/platformio.ini
+++ b/Firmware/platformio.ini
@@ -1,7 +1,9 @@
 [env]
 platform = atmelavr
-board = leonardo
-board_build.f_cpu = 16000000L
+board = sparkfun_promicro8
+framework = arduino
+board_build.mcu = atmega32u4
+board_build.f_cpu = 8000000L
 
 build_src_filter =
     +<*.cpp> +<*.c>
@@ -23,8 +25,8 @@ build_flags =
     -DUSB_VID=0x045E
     -DUSB_PID=0x0289
     -D__AVR_ATmega32U4__
-    -DARDUINO_AVR_LEONARDO
-    -DF_CPU=16000000L
+    -DARDUINO_AVR_PROMICRO
+    -DF_CPU=8000000L
     -DARDUINO_ARCH_AVR
     -DARDUINO=10808
     -DDISABLE_CDC
@@ -44,5 +46,5 @@ build_flags =
 [env:OGX360]
 build_flags =
     ${env.build_flags}
-    -DMAX_GAMEPADS=4 ;Max USBD controllers (Master + slave modules)
-    -DXINPUT_MAXGAMEPADS=4 ;Max USBH controllers
+    -DMAX_GAMEPADS=1 ;Max USBD controllers (Master + slave modules)
+    -DXINPUT_MAXGAMEPADS=1 ;Max USBH controllers
